<resources>

    <!--Home Screen-->
    <string name="app_name">TuneTrain</string>
    <string name="sandbox_button">Sandbox</string>
    <string name="training_button">Ear Training</string>
    <string name="stats_button">Stats</string>
    <string name="stats_title">Statistics</string>
    <string name="title_activity_sandbox">SandboxActivity</string>

    <string name="no_guesses">N/A</string>

    <!-- NOTE NAMES -->
    <string name="Ab">Ab</string>
    <string name="A">A</string>
    <string name="Bb">Bb</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="Cs">C#</string>
    <string name="D">D</string>
    <string name="Eb">Eb</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="Fs">F#</string>
    <string name="G">G</string>

    <!--Mode Dialog-->
    <string name="mode_alert">Select The Training Mode</string>
    <string name="spotify_mode">Spotify</string>
    <string name="note_mode">Note</string>

    <!--Functional Buttons-->
    <string name="note_play">Play Note</string>
    <string name="spotify_play">Play/Pause</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="playlist_select">Select Playlist</string>
    <string name="template_select">Select Template</string>
    <string name="template_add">Add Template</string>

    <!--Functional Text Views-->
    <string name="template_list_title">Your Templates</string>
    <string name="playlist_list_title">Your Spotify Playlists</string>


</resources>
