<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <Button
        android:id="@+id/sandbox_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sandbox_button" />

    <Button
        android:id="@+id/training_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_button" />
    <Button
        android:id="@+id/stats_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_button" />
</LinearLayout>